shop overflow fixed

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -17,7 +17,6 @@
 	margin-right: 10px;
 }
 
-
 .search {
 	display: flex;
 }
@@ -27,6 +26,33 @@
 	font-size: 22px;
 	margin-left: 20px;
 }
+.search-suggestions {
+	position: absolute;
+	top: 45px;
+	left: 20px;
+	width: 100%;
+	max-height: 200px;
+	overflow-y: auto;
+	background-color: #fff;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	z-index: 1;
+  }
+  
+  .search-suggestions ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+  }
+  
+  .search-suggestions li {
+	padding: 8px 16px;
+	cursor: pointer;
+  }
+  
+  .search-suggestions li:hover {
+	background-color: #f4f4f4;
+  }
+  
 .name {
 	font-size: 32px;
 	color: white;
